--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
 }
