--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        preference_version = '1.1.1'
+        appcompat_version = '1.3.0'
     }
     repositories {
         google()
