--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@ buildscript {
         compose_version = '1.0.1'
         preference_version = '1.1.1'
         appcompat_version = '1.3.0'
+        room_version = "2.4.3"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:7.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
         classpath 'com.google.gms:google-services:4.3.13'
