--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,8 +95,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.0"
-    kapt "androidx.room:room-compiler:2.4.0"
-    implementation "androidx.room:room-ktx:2.4.0"
-    androidTestImplementation "androidx.room:room-testing:2.4.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
+    // Swipe Refresh
+    implementation "com.google.accompanist:accompanist-swiperefresh:$swiperefresh_version"
 }
