--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         compose_version = '1.0.1'
         preference_version = '1.1.1'
         appcompat_version = '1.3.0'
-        room_version = "2.4.3"
+        room_version = "2.4.0"
+        swiperefresh_version = "0.23.0"
     }
     repositories {
         google()
