--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         appcompat_version = '1.3.0'
         room_version = "2.4.0"
         swiperefresh_version = "0.23.0"
+        navigation_version = "2.5.2"
     }
     repositories {
         google()
