--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,7 @@ dependencies {
 
     // Swipe
     implementation "me.saket.swipe:swipe:1.0.0"
+
+    // Splash screen Api
+    implementation("androidx.core:core-splashscreen:1.0.0")
 }
