--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tarikyasar.curmin">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".Curmin"
@@ -18,9 +18,13 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Curmin" />
+        <activity
+            android:name=".presentation.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Curmin">
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,5 +32,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
