Add date selection to currency detail screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,8 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.preference:preference-ktx:$preference_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -109,4 +107,8 @@ dependencies {
 
     // Splash screen Api
     implementation("androidx.core:core-splashscreen:1.0.0")
+
+    // Material Design
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "com.google.android.material:material:1.5.0"
 }
