Add chart for currency rate timeseries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.2.0"
     }
     packagingOptions {
         resources {
@@ -87,7 +87,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
@@ -111,4 +111,7 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     implementation "com.google.android.material:material:1.5.0"
+
+    // Chart
+    implementation("com.himanshoe:charty:1.0.1")
 }
