--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         swiperefresh_version = "0.23.0"
         navigation_version = "2.5.2"
         nav_animation_version = "0.24.4-alpha"
+        lottie = "5.2.0"
     }
     repositories {
         google()
