--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,26 @@ buildscript {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.45"
         classpath 'com.google.gms:google-services:4.3.13'
+    }
+
+    ext.getVersionCode = { ->
+        try {
+            def stdout = new ByteArrayOutputStream()
+            exec {
+                commandLine 'git', 'rev-list', '--first-parent', '--count', 'origin/main'
+                standardOutput = stdout
+            }
+            return Integer.parseInt(stdout.toString().trim())
+        }
+        catch (ignored) {
+            return -1;
+        }
     }
 }
 
