--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,6 @@ buildscript {
 
         swipeRefresh = "0.30.0"
 
-        navigation = "2.6.0"
-
-        nav_animation = "0.24.4-alpha"
-
         lottie = "5.2.0"
 
         retrofit = "2.9.0"
@@ -27,18 +23,13 @@ buildscript {
         material = "1.9.0"
 
         ktx = "1.10.1"
+
+        composeDestinations = '1.8.38-beta'
     }
 
     repositories {
         google()
         mavenCentral()
-    }
-
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.45"
-        classpath 'com.google.gms:google-services:4.3.13'
     }
 
     ext.getVersionCode = { ->
@@ -54,6 +45,15 @@ buildscript {
             return -1;
         }
     }
+}
+
+plugins {
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.45' apply false
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
 
 task clean(type: Delete) {
